<resources>
    <string name="app_name">Municipalité</string>
    <string name="action_settings">Settings</string>

    <string name="no_stream">Radio station couldn\'t stream!</string>
    <string name="live_broadcast">On Air</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test">test</string>


    <string-array name="localisation">

        <item> Emplacement géographique</item>
        <item>Sfax Ville</item>
        <item>El Hencha</item>
        <item>Sakiet Eddaier</item>
        <item>Sfax Sud</item>
        <item>Manzel Chaker</item>
        <item>Kerkenah</item>
        <item>Jebeniana</item>
        <item>Sakiet Ezzit</item>
        <item>Sfax Est</item>
        <item>Ghraiba</item>
        <item>Agareb</item>
        <item>El Amra</item>
        <item>Bir Ali Ben Khelifa</item>
        <item>Mahras</item>
        <item>Esskhira</item>
    </string-array>

    <string name="err_name">Le nom ne peut pas être vide.</string>
    <string name="err_phone">Le numéro doit contenir 8 charactères.</string>
    <string name="err_email">L\'adresse e-mail n\'est pas valide.</string>
    <string name="err_password">Le mot de passe doit contenir au moin 6 charactères.</string>


    <string name="textAcc">Centre de formation agréé par l\'état</string>
    <string name="EmailHint">E-mail</string>
    <string name="NameHint">Nom et prénom</string>
    <string name="TelHint">Numéro de téléphone</string>
    <string name="passwordHint">Mot de passe</string>
    <string name="seCoAvec">Ou se connecter avec</string>
    <string name="pasdeCompte">Vous n\'avez pas de compte ?</string>
    <string name="ANNULER">ANNULER</string>
    <string name="CONNEXION">CONNEXION</string>
    <string name="CreerUn">Creer un!</string>
    <string name="ConfirmPasswordHint">Confirmer mot de passe</string>
    <string name="ACompte">Vous avez un compte ?</string>
    <string name="Login">Se connecter</string>
    <string name="Modifier">Modifier</string>
    <string name="Inscription">Inscription</string>
</resources>
