<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".RegistrationActivity"
    android:background="@color/LoginColorWhite"
    android:id="@+id/scroll_sub"
    >


    <RelativeLayout
        android:id="@+id/linear_registration"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/LoginColorWhite"
            android:id="@+id/toolbar_subscribe"
            android:layout_alignParentTop="true">

            <com.RadioSfax.acer.radiosfax.CustomFonts.FontTextSourceSansProRegular
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:gravity="center"
                android:text="Créer un compte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/GreyBlackForma"/>

        </android.support.v7.widget.Toolbar>


        <ImageView
            android:layout_below="@id/toolbar_subscribe"
            android:id="@+id/logo_photo"
            android:layout_centerInParent="true"
            android:layout_width="140dp"
            android:layout_height="100dp"
            android:src="@drawable/new_logo"
            />



        <android.support.design.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="560dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="4dp"
            android:id="@+id/card_of_items"
            android:layout_below="@id/logo_photo">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/LoginColorWhite"
                android:orientation="vertical"
                android:weightSum="33">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.4" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/name_text_input_sub"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/NameHint"
                    app:errorEnabled="true"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeColor="@color/GreyBlackForma"
                    app:boxStrokeWidth="0.5dp"
                    app:boxCornerRadiusBottomEnd="12dp"
                    app:boxCornerRadiusTopEnd="12dp"
                    app:boxCornerRadiusBottomStart="12dp"
                    app:boxCornerRadiusTopStart="12dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/name_edit_text_sub"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"/>

                </android.support.design.widget.TextInputLayout>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/email_text_input_sub"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/EmailHint"
                    app:errorEnabled="true"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeColor="@color/GreyBlackForma"
                    app:boxStrokeWidth="0.5dp"
                    app:boxCornerRadiusBottomEnd="12dp"
                    app:boxCornerRadiusTopEnd="12dp"
                    app:boxCornerRadiusBottomStart="12dp"
                    app:boxCornerRadiusTopStart="12dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/email_edit_text_sub"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />
                </android.support.design.widget.TextInputLayout>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/password_text_input_sub"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/passwordHint"
                    app:errorEnabled="true"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeColor="@color/GreyBlackForma"
                    app:boxStrokeWidth="0.5dp"
                    app:boxCornerRadiusBottomEnd="12dp"
                    app:boxCornerRadiusTopEnd="12dp"
                    app:boxCornerRadiusBottomStart="12dp"
                    app:boxCornerRadiusTopStart="12dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/GreyBlackForma">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/password_text_edit_sub"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tel_text_input_sub"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/TelHint"
                    app:errorEnabled="true"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeColor="@color/GreyBlackForma"
                    app:boxStrokeWidth="0.5dp"
                    app:boxCornerRadiusBottomEnd="12dp"
                    app:boxCornerRadiusTopEnd="12dp"
                    app:boxCornerRadiusBottomStart="12dp"
                    app:boxCornerRadiusTopStart="12dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/tel_edit_text_sub"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"/>

                </android.support.design.widget.TextInputLayout>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <android.support.design.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp">

                    <com.jaredrummler.materialspinner.MaterialSpinner
                        android:id="@+id/spinnerDateDebut"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Date de naissance"/>

                </android.support.design.card.MaterialCardView>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.5" />

                <android.support.design.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp">

                    <com.jaredrummler.materialspinner.MaterialSpinner
                        android:id="@+id/spinnerPlace"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </android.support.design.card.MaterialCardView>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:weightSum="2"
                    android:gravity="center_horizontal">

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.2" />



                    <com.RadioSfax.acer.radiosfax.CustomButton
                        android:id="@+id/next_button_sub"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.8"
                        android:text="@string/CONNEXION"
                        app:backgroundTint="@color/OrangeForma"
                        app:cornerRadius="12dp"
                        android:textSize="10sp"
                        />

                </LinearLayout>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.2" />

                <TextView
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.5"
                    android:text="@string/seCoAvec"
                    android:gravity="center"
                    android:textSize="13sp"/>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.2" />



                <View
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="6"
                    android:orientation="vertical"
                    android:weightSum="3.2"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp">


                    <android.support.design.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="4dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:elevation="14dp">

                       <!-- <com.facebook.login.widget.LoginButton
                            android:id="@+id/facebook_login"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>-->
                    </android.support.design.card.MaterialCardView>


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.4"/>


                    <com.google.android.gms.common.SignInButton
                        android:id="@+id/sign_in_button"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2.7"
                        />


                </LinearLayout>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.4" />

            </LinearLayout>

        </android.support.design.card.MaterialCardView>



        <LinearLayout
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_below="@id/card_of_items">

            <TextView
                android:layout_weight="1.1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/ACompte"
                android:gravity="center"/>

            <com.RadioSfax.acer.radiosfax.CustomButton
                android:id="@+id/login_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.9"
                android:text="@string/Login"
                android:textColor="@color/OrangeForma"
                app:cornerRadius="12dp"
                android:textSize="11sp"
                android:gravity="center"/>

        </LinearLayout>



    </RelativeLayout>





</ScrollView>